Add container, buttons and divs for the ui

--- a/index.html
+++ b/index.html
@@ -1,11 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Jak En Poy</title>
-  </head>
-  <body>
-    <script src="script.js"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Jak En Poy</title>
+</head>
+
+<body>
+  <div class="container"></div>
+  <div class="message">Try your luck?</div>
+  <div class="scores">
+    <div class="player-score"></div>
+    <div class="round-result"></div>
+    <div class="computer-score"></div>
+  </div>
+  <div class="choice">
+    <div class="player-choice"></div>
+    <div class="computer-choice"></div>
+  </div>
+  <div class="buttons">
+    <button id="rock"><img src="./images/rock.png" alt="rock" id="rock"></button>
+    <button id="paper"><img src="./images/paper.png" alt="paper" id="paper"></button>
+    <button id="sicssors"><img src="./images/scissors.png" alt="scissors" id="scissors"></button>
+  </div>
+  <button id="new-game">New Game</button>
+  <!-- <script src="script.js"></script> -->
+</body>
+
 </html>
