--- a/index.html
+++ b/index.html
@@ -5,26 +5,28 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Jak En Poy</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-  <div class="container"></div>
-  <div class="message">Try your luck?</div>
-  <div class="scores">
-    <div class="player-score"></div>
-    <div class="round-result"></div>
-    <div class="computer-score"></div>
+  <div class="container">
+    <div class="message">Try your luck?</div>
+    <div class="scores">
+      <div class="player-score">4</div>
+      <div class="score-divider">:</div>
+      <div class="computer-score">2</div>
+    </div>
+    <div class="choice">
+      <div class="player-choice">ROCK</div>
+      <div class="computer-choice">PAPER</div>
+    </div>
+    <div class="buttons">
+      <button id="rock"></button>
+      <button id="paper"></button>
+      <button id="scissors"></button>
+    </div>
+    <button id="new-game">New Game</button>
   </div>
-  <div class="choice">
-    <div class="player-choice"></div>
-    <div class="computer-choice"></div>
-  </div>
-  <div class="buttons">
-    <button id="rock"><img src="./images/rock.png" alt="rock" id="rock"></button>
-    <button id="paper"><img src="./images/paper.png" alt="paper" id="paper"></button>
-    <button id="sicssors"><img src="./images/scissors.png" alt="scissors" id="scissors"></button>
-  </div>
-  <button id="new-game">New Game</button>
   <!-- <script src="script.js"></script> -->
 </body>
 
