refactor(button): Update class name
Changed class name from buttons to game-buttons for clarity

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <div class="player-choice">ROCK</div>
       <div class="computer-choice">PAPER</div>
     </div>
-    <div class="buttons">
+    <div class="game-buttons">
       <button id="rock"></button>
       <button id="paper"></button>
       <button id="scissors"></button>
