feat: Add createImage function
Function facilitates image display for player and computer choices

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
       <div class="computer-score">2</div>
     </div>
     <div class="choice">
-      <div class="player-choice">ROCK</div>
-      <div class="computer-choice">PAPER</div>
+      <div class="player-choice"></div>
+      <div class="computer-choice"></div>
     </div>
     <div class="game-buttons">
       <button id="rock"></button>
