feat: Implement button listener for displaying player and computer choices as image
Enhancing interactive experience

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </div>
     <button id="new-game">New Game</button>
   </div>
-  <!-- <script src="script.js"></script> -->
+  <script src="script.js"></script>
 </body>
 
 </html>
