feat(score-printing): Show player and computer scores on the screen

--- a/index.html
+++ b/index.html
@@ -10,14 +10,15 @@
 
 <body>
   <div class="container">
-    <div class="message">Try your luck?</div>
+    <div class="message">Jak En Poy</div>
     <div class="scores">
-      <div class="player-score">4</div>
+      <div class="player-score">0</div>
       <div class="score-divider">:</div>
-      <div class="computer-score">2</div>
+      <div class="computer-score">0</div>
     </div>
     <div class="choice">
       <div class="player-choice"></div>
+      <div class="versus">VS</div>
       <div class="computer-choice"></div>
     </div>
     <div class="game-buttons">
