Refactor: Change class names, styling and text contents
Functionality is still unchanged

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
   <div class="container">
-    <div class="message">Jak En Poy</div>
+    <div class="message">Try your luck?</div>
     <div class="scores">
       <div class="player-score">0</div>
       <div class="score-divider">:</div>
@@ -18,7 +18,7 @@
     </div>
     <div class="choice">
       <div class="player-choice"></div>
-      <div class="versus">VS</div>
+      <div class="versus">Choose your weapon to play!</div>
       <div class="computer-choice"></div>
     </div>
     <div class="game-buttons">
