Add logo for browser tab

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Jak En Poy</title>
+  <link rel="icon" href="./images/logo.png" type="image/png" sizes="100x100">
   <link rel="stylesheet" href="style.css">
 </head>
 
